# btc-forum-rust

./: .env.example  .gitignore  Cargo.toml  history.txt  readme.md  surreal_forum.sql
.github/workflows/: ci.yml
docs/: surreal_schema.md
frontend/: Cargo.toml  Dioxus.toml
frontend/src/: main.rs
migrations/: 0001_init.sql
migrations/surreal/: 0001_init.surql
src/: admin.rs  attachments.rs  auth.rs  calendar.rs  db.rs  db_packages.rs  display.rs  drafts.rs  editor.rs  errors.rs  language.rs  lib.rs  load.rs  logging.rs  main.rs  manage_attachments.rs  manage_bans.rs  manage_maintenance.rs  manage_membergroups.rs  manage_members.rs  manage_news.rs  manage_permissions.rs  manage_posts.rs  manage_server.rs  manage_settings.rs  memberlist.rs  mentions.rs  message_index.rs  moderation_center.rs  news.rs  notify.rs  personal_messages.rs  pm_context.rs  pm_ops.rs  poll.rs  post_ops.rs  profile_actions.rs  profile_export.rs  profile_modify.rs  profile_notifications.rs  (+13 more)
src/controller/: post.rs
src/services/: mod.rs  surreal.rs
src/templates/: alerts_template.rs  editor_template.rs  mod.rs  profile_template.rs
target-codex/: .rustc_info.json
target-codex/debug/.fingerprint/libc-c38ec49097755cf4/: build-script-build-script-build.json
target-codex/debug/.fingerprint/quote-b2cf4ddcde249389/: build-script-build-script-build  build-script-build-script-build.json
target-codex/debug/.fingerprint/unicode-ident-f61779ef1e04259f/: output-lib-unicode_ident
target-local/: .rustc_info.json
target-local/debug/.fingerprint/cfg-if-18a708a4a0d70bfc/: output-lib-cfg_if
target-local/debug/.fingerprint/libc-c38ec49097755cf4/: build-script-build-script-build
target-local/debug/.fingerprint/libc-c5e7468cf9182463/: run-build-script-build-script-build  run-build-script-build-script-build.json
tests/: api_smoke.rs  limits.rs  posting.rs
(+11 files in other folders)
