[package]
name = "btc-forum-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], package = "chrono" }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
regex = "1.10"
lazy_static = "1.4"
