[package]
name = "btc-forum-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], package = "chrono" }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
surrealdb = { version = "2.3.10", features = ["protocol-http"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
ammonia = "3"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
